--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "lint-staged": ">=8",
     "parcel-bundler": "^1.12.3",
     "prettier": "^2.0.5",
-    "start-server-and-test": "^1.10.0"
+    "start-server-and-test": "^1.10.0",
+    "@material-ui/core": "^4.2.1"
   },
   "husky": {
     "hooks": {
