--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "sass": "^1.26.5"
+    "sass": "^1.26.5",
+    "@material-ui/core": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
@@ -41,10 +42,9 @@
     "jest": "^26.0.1",
     "jest-css-modules-transform": "^4.0.0",
     "lint-staged": ">=8",
+    "node-sass": "^4.14.1",
     "parcel-bundler": "^1.12.3",
-    "prettier": "^2.0.5",
-    "start-server-and-test": "^1.10.0",
-    "@material-ui/core": "^4.2.1"
+    "prettier": "^2.0.5"
   },
   "husky": {
     "hooks": {
