--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.0.0",
+    "@material-ui/core": "^4.2.1",
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^10.0.4",
     "babel-eslint": "^10.1.0",
@@ -41,10 +42,9 @@
     "jest": "^26.0.1",
     "jest-css-modules-transform": "^4.0.0",
     "lint-staged": ">=8",
+    "node-sass": "^4.14.1",
     "parcel-bundler": "^1.12.3",
-    "prettier": "^2.0.5",
-    "start-server-and-test": "^1.10.0",
-    "@material-ui/core": "^4.2.1"
+    "prettier": "^2.0.5"
   },
   "husky": {
     "hooks": {
